--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Shopme Admin Control Panel</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec ="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" >
+<head th:replace="fragments :: page_head('Home-Slipkart Admin', 'none')"></head>
 <body>
-<h1>Welcome To Shopme Admin Control Panel</h1>
+	<div class= "container-fluid">
+	<div th:replace="navigation :: menu"> </div>
+	
+
+		<div>
+			<h2>SLIPKART Control Panel</h2>
+			Welcome
+		<a th:href="@{/account}"
+		sec:authentication="principal.fullname"></a>
+		<span sec:authentication="principal.authorities"></span>
+		</div>
+	<div th:replace="fragments :: footer"></div>
+
+	</div>
 
 </body>
 </html>
